# MailThunder

./: .bandit  .gitignore  CLAUDE.md  IMAPMail.py  LICENSE  README.md  dev.toml  dev_requirements.txt  dev_setup.py  pyproject.toml  requirements.txt  setup.py  stable.toml  test.py
.circleci/: config.yml
.github/workflows/: mail-thunder-github-actions_dev.yml  mail-thunder-github-actions_stable.yml  mail_thunder_dev_python3_10.yml  mail_thunder_dev_python3_11.yml  mail_thunder_dev_python3_12.yml  mail_thunder_dev_python3_8.yml  mail_thunder_dev_python3_9.yml  mail_thunder_stable_python3_10.yml  mail_thunder_stable_python3_11.yml  mail_thunder_stable_python3_12.yml  mail_thunder_stable_python3_8.yml  mail_thunder_stable_python3_9.yml  publish_stable.yml  test_dev.yml  test_stable.yml
README/: README_zh-CN.md  README_zh-TW.md
docs/: README.md
docs/source/: conf.py  index.rst
docs/source/docs/Eng/: cli.rst  (+11 more)
je_mail_thunder/: __init__.py  __main__.py
je_mail_thunder/imap/: imap_wrapper.py  mail_thunder_content.json  test_subject
je_mail_thunder/smtp/: smtp_wrapper.py
je_mail_thunder/utils/exception/: exception_tags.py  exceptions.py
mail_wrapper_je/: __init__.py
mail_wrapper_je/pop/: pop_wrapper.py
mail_wrapper_je/smtp/: smtp_wrapper.py
test/unit_test/: test_content_data.py  test_content_save.py  test_create_project.py  test_exception_tags.py  test_exceptions.py  test_executor.py  test_get_dir_file_list.py  test_json_file.py  test_json_process.py  test_main.py  test_package_manager.py  test_save_on_env.py  test_smtp_wrapper.py  test_socket_server.py
(+51 files in other folders)
