[build-system]
requires = [
    "setuptools>=82.0.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "je_mail_thunder"
version = "0.0.26"
authors = [
    { name = "JE-Chen", email = "jechenmailman@gmail.com" },
]
description = ""
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Environment :: X11 Applications",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/Intergration-Automation-Testing/MailThunder"

[tool.setuptools.packages.find]
namespaces = false

[tool.pytest.ini_options]
testpaths = [
    "test",
]

[tool.bandit]
exclude_dirs = [
    "test",
]
skips = [
    "B101",
]
